--- a/just-java/app/src/main/res/layout/activity_main.xml
+++ b/just-java/app/src/main/res/layout/activity_main.xml
@@ -25,19 +25,33 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="0"
-            android:id="@+id/textView"
-            android:layout_below="@+id/textView2"
-            android:layout_alignParentStart="true"
-            android:paddingBottom="16dp"
-            android:textSize="16sp"/>
+            android:id="@+id/quantity_text_view"
+            android:textSize="16sp"
+            android:paddingBottom="16dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PRICE"
+            android:id="@+id/textView3"
+            android:paddingBottom="16dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="$0"
+            android:id="@+id/price_text_view"
+            android:textSize="16sp"
+            android:paddingBottom="16dp"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ORDER"
             android:id="@+id/button"
-            android:layout_below="@+id/textView"
-            android:layout_alignParentStart="true" />
+            android:layout_marginTop="16dp"
+            android:onClick="submitOrder"/>
     </LinearLayout>
 
 
